<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<com.ting.preference.SeekBarPreference
		android:key="pref_rotation"
		android:title="@string/pref_rotate"
		android:summary="@string/pref_rotate_summ"
		android:dialogMessage="@string/pref_rotate_message"
        android:format="@string/pref_rotate_format"
		android:text="@string/pref_rotate_text"
		android:max="160"
        android:valueFrom="-20.0"
        android:valueTo="20.0"
        android:valueType="floatType"
        android:defaultValue="2.0"
	/>
	<!-- android:dialogTitle="Rotation"  -->
	
	<PreferenceCategory 
        android:title="Reminders">
        
		<EditTextPreference
			android:key="pref_notifySubject"
			android:dialogMessage="Message Subject Line"
			android:title="Subject"
			android:summary="Message Subject Line"
			android:defaultValue="Reminder ..." />
		
		<CheckBoxPreference
			android:key="pref_notify"
			android:title="@string/pref_notify"
			android:summary="@string/pref_notify_summ"
			android:defaultValue="false" />
		
		<ListPreference
			android:dependency="pref_notify"
			android:key="pref_notifyMethod"
			android:title="@string/pref_notifyMethod"
			android:dialogTitle="@string/pref_notifyMethod"
			android:entries="@array/pref_notifyMethod_entries"
			android:entryValues="@array/pref_notifyMethod_values"
			android:defaultValue="@string/pref_notifyMethod_default" />
		
		<MultiSelectListPreference
			android:dependency="pref_notify"
			android:key="pref_notifyBefore"
			android:title="@string/pref_notifyBefore"
			android:dialogTitle="@string/pref_notifyBefore"
			android:entries="@array/pref_notifyBefore_entries"
			android:entryValues="@array/pref_notifyBefore_values"
			android:defaultValue="@array/empty" />

	</PreferenceCategory>
</PreferenceScreen>
